добавил скелет во все сервисы
